--- a/_variables.scss
+++ b/_variables.scss
@@ -4,7 +4,7 @@ $desktop: 1440px;
 
 //Primary
 $dark-cyan: hsl(158,36%, 37%);
-$crean: hsl(30, 38%, 92%);
+$cream: hsl(30, 38%, 92%);
 
 //Neutral
 $white: hsl(0, 0%, 100%);
