--- a/style.css
+++ b/style.css
@@ -1,1 +1,32 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+p {
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+}
+
+h1 {
+  font-family: "Fraunces", serif;
+}
+
+.preview-card .product-img {
+  background-image: url("./media/image-product-desktop.jpg");
+}
+.preview-card .product-info p {
+  color: hsl(228, 12%, 48%);
+}
+.preview-card .product-info .product-cost-wrapper h1 {
+  color: hsl(158, 36%, 37%);
+}
+.preview-card .product-info .product-cost-wrapper p {
+  text-decoration: line-through;
+}/*# sourceMappingURL=style.css.map */
