--- a/style.css
+++ b/style.css
@@ -18,11 +18,30 @@ h1 {
   font-family: "Fraunces", serif;
 }
 
+.preview-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(30, 38%, 92%);
+}
 .preview-card .product-img {
   background-image: url("./media/image-product-desktop.jpg");
+  width: 500px;
+  height: 500px;
+  background-size: cover;
+  background-position: center;
 }
 .preview-card .product-info p {
   color: hsl(228, 12%, 48%);
+}
+.preview-card .product-info p:first-child {
+  letter-spacing: 4px;
+}
+.preview-card .product-info .product-cost-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .preview-card .product-info .product-cost-wrapper h1 {
   color: hsl(158, 36%, 37%);
