--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ h1{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: $cream;
+    border-radius: 5px;
 
     .product-img{
         background-image: url('./media/image-product-desktop.jpg');
@@ -62,5 +62,13 @@ h1{
 }
 
 @media (max-width: $mobile-breakpoint){
+    
+    .preview-card{
+        display: flex;
+        flex-direction: column;
 
+        .product-img{
+            background-image: url(./media/image-product-mobile.jpg);
+        }
+    }
 }
