--- a/style.css
+++ b/style.css
@@ -18,19 +18,35 @@ h1 {
   font-family: "Fraunces", serif;
 }
 
+.card-contain {
+  background-color: hsl(30, 38%, 92%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
 .preview-card {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  border-radius: 5px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 .preview-card .product-img {
   background-image: url("./media/image-product-desktop.jpg");
-  width: 500px;
-  height: 500px;
+  height: 400px;
+  width: 100%;
   background-size: cover;
   background-position: center;
+}
+.preview-card .product-info {
+  display: flex;
+  flex-direction: column;
+  background-color: hsl(0, 0%, 100%);
 }
 .preview-card .product-info p {
   color: hsl(228, 12%, 48%);
@@ -51,11 +67,24 @@ h1 {
 }
 
 @media (max-width: 500px) {
+  .card-contain {
+    width: 100vw;
+    height: 100vh;
+  }
   .preview-card {
     display: flex;
     flex-direction: column;
+    margin: 20px;
+    border-radius: 10px;
+    overflow: hidden;
   }
   .preview-card .product-img {
     background-image: url(./media/image-product-mobile.jpg);
+    height: 35vh;
+    width: 100%;
+  }
+  .preview-card .product-info {
+    height: 55vh;
+    padding: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
