--- a/style.scss
+++ b/style.scss
@@ -17,22 +17,39 @@ h1{
     font-family: $fraunces-font;
 }
 
+.card-contain{
+    background-color: $cream;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
 .preview-card{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border-radius: 5px;
+    border-radius: 10px;
+    overflow: hidden;
 
     .product-img{
         background-image: url('./media/image-product-desktop.jpg');
-        width: 500px;
-        height: 500px;
+        height: 400px;
+        width: 100%;
         background-size: cover;
         background-position: center;
     }
 
     .product-info{
+        display: flex;
+        flex-direction: column;
+        
+        background-color: $white;
+        
+
         p{
             color: $dark-grayish-blue; 
         }
@@ -62,13 +79,27 @@ h1{
 }
 
 @media (max-width: $mobile-breakpoint){
-    
+    .card-contain{
+        width: 100vw;
+        height: 100vh;
+    }
+
     .preview-card{
         display: flex;
         flex-direction: column;
+        margin: 20px;
+        border-radius: 10px;
+        overflow: hidden;
 
         .product-img{
             background-image: url(./media/image-product-mobile.jpg);
+            height: 35vh;
+            width: 100%;
+        }
+
+        .product-info{
+            height: 55vh;
+            padding: 20px;
         }
     }
 }
