--- a/style.scss
+++ b/style.scss
@@ -34,10 +34,11 @@ h1{
     align-items: center;
     border-radius: 10px;
     overflow: hidden;
+    height: 400px;
 
     .product-img{
         background-image: url('./media/image-product-desktop.jpg');
-        height: 400px;
+        height: 100%;
         width: 100%;
         background-size: cover;
         background-position: center;
@@ -48,14 +49,14 @@ h1{
         flex-direction: column;
         
         background-color: $white;
-        
+        height: 100%;
 
         p{
             color: $dark-grayish-blue; 
         }
 
         p:first-child{
-            letter-spacing: 4px;
+            letter-spacing: 6px;
         }
 
         .product-cost-wrapper{
@@ -90,16 +91,27 @@ h1{
         margin: 20px;
         border-radius: 10px;
         overflow: hidden;
-
+        height: 90vh;
         .product-img{
             background-image: url(./media/image-product-mobile.jpg);
-            height: 35vh;
+            height: 40%;
             width: 100%;
         }
 
         .product-info{
-            height: 55vh;
+            height: 60%;
             padding: 20px;
+
+            p{
+                padding-top: 10px;
+                font-size: 15px;   
+            }
+            
+            h1{
+                font-size: 30px;
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
         }
     }
 }
