--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,8 @@ h1{
     font-family: $fraunces-font;
 }
 
+
+
 .card-contain{
     background-color: $cream;
     display: flex;
@@ -35,6 +37,19 @@ h1{
     border-radius: 10px;
     overflow: hidden;
     height: 400px;
+
+    button{
+        all: initial;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        background-color: $dark-cyan;
+        height: 50px;
+        color: $white;
+        gap: 10px;
+    }
 
     .product-img{
         background-image: url('./media/image-product-desktop.jpg');
@@ -94,23 +109,29 @@ h1{
         height: 90vh;
         .product-img{
             background-image: url(./media/image-product-mobile.jpg);
-            height: 40%;
+            height: 44%;
             width: 100%;
         }
 
         .product-info{
-            height: 60%;
+            height: 56%;
             padding: 20px;
 
-            p{
+            > p{
                 padding-top: 10px;
-                font-size: 15px;   
+                font-size: 15px;
+                
             }
             
             h1{
                 font-size: 30px;
                 padding-top: 10px;
                 padding-bottom: 10px;
+            }
+            .product-cost-wrapper{
+                >p{
+                    padding-left: 20px;
+                }
             }
         }
     }
