--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1 {
   align-items: center;
   border-radius: 10px;
   overflow: hidden;
-  height: 400px;
+  height: 600px;
 }
 .preview-card button {
   all: initial;
@@ -59,6 +59,7 @@ h1 {
 .preview-card .product-info {
   display: flex;
   flex-direction: column;
+  padding: 20px;
   background-color: hsl(0, 0%, 100%);
   height: 100%;
 }
@@ -80,6 +81,30 @@ h1 {
   text-decoration: line-through;
 }
 
+@media (max-width: 1440px) {
+  .card-contain {
+    height: 100vh;
+    width: 100vw;
+  }
+  .product-img {
+    background-image: url(./media/image-product-desktop.jpg);
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .product-info > p {
+    padding-top: 10px;
+    font-size: 15px;
+  }
+  .product-info h1 {
+    font-size: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .product-info .product-cost-wrapper > p {
+    padding-left: 20px;
+  }
+}
 @media (max-width: 375px) {
   .card-contain {
     width: 100vw;
@@ -100,7 +125,6 @@ h1 {
   }
   .preview-card .product-info {
     height: 56%;
-    padding: 20px;
   }
   .preview-card .product-info > p {
     padding-top: 10px;
