--- a/style.scss
+++ b/style.scss
@@ -36,7 +36,7 @@ h1{
     align-items: center;
     border-radius: 10px;
     overflow: hidden;
-    height: 400px;
+    height: 600px;
 
     button{
         all: initial;
@@ -62,7 +62,8 @@ h1{
     .product-info{
         display: flex;
         flex-direction: column;
-        
+
+        padding: 20px;
         background-color: $white;
         height: 100%;
 
@@ -91,7 +92,35 @@ h1{
 }
 
 @media (max-width: $desktop){
-    
+    .card-contain{
+        height: 100vh;
+        width: 100vw;
+    }
+    .product-img{
+        background-image: url(./media/image-product-desktop.jpg);
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .product-info{
+
+        > p{
+            padding-top: 10px;
+            font-size: 15px;
+            
+        }
+        
+        h1{
+            font-size: 30px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        .product-cost-wrapper{
+            >p{
+                padding-left: 20px;
+            }
+        }
+    }   
 }
 
 @media (max-width: $mobile-breakpoint){
@@ -115,7 +144,6 @@ h1{
 
         .product-info{
             height: 56%;
-            padding: 20px;
 
             > p{
                 padding-top: 10px;
